# readline.cpp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  PORTING_NOTES.md  README.md  go.mod  go.sum
.github/workflows/: ci.yml
examples/: simple.cpp  test_raw_mode.cpp
examples_cpp/: simple.cpp
include/readline/: buffer.h  readline.h  terminal.h
readline.go/: simple
src/: buffer.cpp  history.cpp  readline.cpp  terminal.cpp
